Allow Panner.refDistance to be 0

Reverts the change that required refDistance to be strictly positive.
This was updated in the spec in issue
https://github.com/WebAudio/web-audio-api/issues/1105, fixed by
https://github.com/WebAudio/web-audio-api/pull/1150

BUG=672156
TEST=Panner/panner-distance-clamping.html

Review-Url: https://codereview.chromium.org/2807313002
Cr-Commit-Position: refs/heads/master@{#464178}

Former-commit-id: 2f69a341b1288a4a6d2e3056f6a2d7609668777e